# tc_agent

./: .gitignore  .vscodeignore  Makefile  README.md  docker-compose.yml  package.json  tsconfig.json
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  ask.py  code.py  code_session.py  knowledge.py  plan.py  workspace.py
backend/app/core/: __init__.py
backend/app/core/agent/: __init__.py  parser.py  (+3 more)
backend/app/infrastructure/: __init__.py  config.py  logger.py  runner_queue.py  vector_store.py  workflow_store.py  workspace.py
backend/app/schemas/: __init__.py  models.py
backend/app/tools/: __init__.py  base.py  registry.py
backend/app/worker/: runner_worker.py
backend/docker/: Dockerfile.optee
backend/knowledge/code/: aes_gcm_example_ta.c
backend/knowledge/docs/: optee_crypto_api.md  optee_ta_guide.md
backend/scripts/: test-all.sh
backend/tests/: conftest.py  test_aes_gcm_templates.py  test_docker_build_commands.py  test_dockerfile_markers.py  test_generator_overwrite.py  test_qemu_run_commands.py  test_settings.py  test_workflow_runner.py
backend/tests/agent/: test_react_agent_file_ops.py
backend/tests/api/: test_ask.py  test_code_websocket.py  test_health_config.py  test_knowledge.py  test_plan.py  test_workspace.py
backend/tests/infrastructure/: test_runner_queue.py  test_workflow_store.py
backend/tests/integration/: test_optee_runner_docker.py
backend/tests/tools/: test_generator_overwrite.py  test_optee_runner.py
(+89 files in other folders)
